# ArenaLink

./: .gitignore  Cargo.toml  README.md  arenalink.service  install-service.sh
arenalink.db/: db  snap.00000000000032E5
client/: example.dart  pubspec.yaml
client/lib/: app.dart  colors.dart  main.dart  theme.dart
client/lib/backends/: arena_backend.dart
client/lib/base/: app_bar.dart  base_rail.dart  base_scaffold.dart
client/lib/helpers/: websocket_helper.dart
client/lib/models/: arena_state.dart  arena_status.dart  arena_status.freezed.dart  arena_status.g.dart  pit_alert.dart  settings.dart  settings.freezed.dart  settings.g.dart
client/lib/providers/: arena_provider.dart  arena_provider.g.dart  cheesy_arena_provider.dart  cheesy_arena_provider.g.dart  issue_provider.dart  settings_provider.dart  settings_provider.g.dart  theme_provider.dart  ticket_status_provider.dart  ticket_status_provider.g.dart
client/lib/router/: app_routes.dart  router.dart  router.g.dart
client/lib/services/: alert_service.dart  log_service.dart
client/lib/widgets/: barber_pole_container.dart  (+2 more)
database/: Cargo.toml
database/src/: db.rs  lib.rs  models.rs  repository.rs  table.rs
server/: .env.example  Cargo.toml
server/src/: config.rs  lib.rs
server/src/core/: mod.rs  server.rs  web.rs
server/src/modules/: mod.rs
server/src/modules/api/: mod.rs
server/src/modules/discord/: bot.rs  messages.rs  mod.rs  service.rs  types.rs
server/src/modules/fms/: mod.rs  models.rs
server/src/modules/fms/cheesy/: connector.rs  logs.rs  mod.rs  models.rs
(+15 files in other folders)
